--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-dialog-window",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Custom dialogs windows",
   "main": "./dist/index.js",
   "scripts": {
     "start": "start",
     "build": "webpack",
+    "pub": "npm version patch && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
